# RPC_framework

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  main.cc
app/: CMakeLists.txt  node.cc
config/: node_config.yaml
include/: client.h  connection.h  const.h  context.h  graph.h  handler.h  message.h  misc.h  node.h  record.h  server.h
include/common/: config.hh  log.hh
include/rdma/: connection.hh  rdma.hh
include/socket/: socket.hh  socket_message.hh
src/: client.cc  connection.cc  server.cc
src/rdma/: rdma.cc
src/socket/: socket.cc  socket_message.cc
